Revise slides and reorganize figures for SCOMP presentation
Updated the Beamer presentation to clarify motivation, add real-world examples, and improve the structure of the 'Motivation' and 'This research' slides. Added new simulation figures and reorganized simulation outputs into a dedicated 'model4' directory. Renamed and updated references to figures and TikZ diagrams, and created a new version of the main TeX and PDF files. Updated auxiliary files to reflect these changes.

--- a/Ppt/251015_tea_v2.tex
+++ b/Ppt/251015_tea_v2.tex
@@ -114,7 +114,7 @@
     \end{itemize}}
 \end{frame}
 
-%%%%%%%%%
+%%%%%%%%% Slide 3 %%%%%%%%%%%%%
 
 \begin{frame}{This research}
 \begin{itemize}
@@ -129,27 +129,41 @@
 \end{itemize}
 \end{frame}
 
- %%%%%%%%%
+ %%%%%%%%% Slide 4 %%%%%%%%%%%%%
 
 \begin{frame}{Literature}
+
+
 \begin{itemize}
-    \item Aftermarkets: \textcite{allen_search_2019} %larsen_efficiency_2021
+    \item Search in selection markets: \textcite{allen_search_2019} %larsen_efficiency_2021
 
-    \item Competition in selection markets: \textcite{mahoney_imperfect_2017, cuesta_price_2018, cosconati_competing_2025}
 
-    \item Selection in multiple dimensions: \textcite{finkelstein_adverse_2004} and Finkelstein and McGarry (2006).  
+    \item Competition in selection markets: \textcite{mahoney_imperfect_2017, cuesta_price_2018, cosconati_competing_2025} %Crawford et al 2018
+
+    \item Centralized marketplaces in selection markets : %Tebaldi (2024), 
+    
+    \item SCOMP specific: % boehm 2024, illanes and padi 2019, alcalde and via.  % 
+    
+    %\item Selection in multiple dimensions: \textcite{finkelstein_adverse_2004} and Finkelstein and McGarry (2006).  
+
+    %\item Aftermarkets: \textcite{allen_search_2019} %larsen_efficiency_2021
+     
 \end{itemize}
-
+\note{
+\textcolor{blue}{ ADD THE CONTRIBUTIONS TO EACH LITERATURE AND ADD MORE PAPERS}
+}
 \end{frame}
 
 %%%%%%%%%
 
 \section{Setting and Data}
 
+%%%%%%%%% Slide 6 %%%%%%%%%%%%%
 \begin{frame}{Setting: annuities}\label{slide:setting}
     
-    
     \begin{itemize}%[<+->]
+    \item Annuities: transform a stock of savings into a stream of payments until death.
+    \item Reasons to buy: insure against overlife risk
         \item Profits of firm $j$: 
     \begin{align*}
     \pi_{ji}(F) = S_i-  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F}{(1+r_j)^t}|x_i \right]
@@ -159,7 +173,10 @@
      $S$: stock of savings, $F$: per period annuity payment, $x_i$: individual mortality factors
     
     \item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
+    
+    \item Our setti
     \end{itemize}
+
 
     \note{
     \begin{itemize}
@@ -291,7 +308,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Model}
+\section{Model and Simulations}
 
 
 \begin{frame}{Learning Model: Overview}
